--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=springpetclinic
 sonar.organization=OBToast
 sonar.host.url=https://sonarcloud.io
-sonar.login=${43c23bdf3d8078fe6b83cd7515ebeda2833eb563}
+sonar.login=${SONAR_TOKEN_HD}
 sonar.sources=src
 sonar.java.binaries=target/classes
 sonar.exclusions=**/test/**,**/resources/**
